<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>

    <!-- Title for Toppings [CHAR LIMIT=NONE] -->
    <string name="toppings">Toppings</string>

    <!-- Title for topping whipped cream [CHAR LIMIT=NONE] -->
    <string name="whipped_cream">Whipped Cream</string>

    <!-- Title for topping chocolate [CHAR LIMIT=NONE] -->
    <string name="chocolate">Chocolate</string>

    <!-- Title for quantity of coffee ordered [CHAR LIMIT=NONE] -->
    <string name="quantity">Quantity</string>

    <!-- Default quantity value [CHAR LIMIT=NONE] -->
    <string name="initial_quantity_value">2</string>

    <!-- Title for order [CHAR LIMIT=NONE] -->
    <string name="order">ORDER</string>

    <!--
     Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
     user's name. [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>

    <!--
   Whipped cream topping for the order summary. It will be shown in the format of
   "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
 -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Java order for <xliff:g example="Amy" id="name">%s</xliff:g></string>

    <!--
        Toast message shown to user in case of more than maximum coffees ordered
    -->
    <string name="too_many_coffee_orders">You cannot have more than <xliff:g example="100" id="quantity">%d</xliff:g> coffees </string>

    <!--
    Toast message shown to user in case of more than maximum coffees ordered
    -->
    <string name="too_less_coffee_orders">You cannot have less than <xliff:g example="1" id="quantity">%d</xliff:g> coffee </string>

</resources>
